--- a/src/lib/color.scss
+++ b/src/lib/color.scss
@@ -6,8 +6,9 @@
     --yellow:#ffc107;
     --orange:#fd6031; 
     --red:   #dc3545;
-    --purple:#a615bc;  
-    --dark:  #292929;
+    --purple:#a615bc;
+    --black: #000000;   
+    --dark:  #272727;
     --gray:  #6c757d;
     --light: #ffffff; 
     --smoke: #f5f5f5;
@@ -41,6 +42,7 @@
     'orange': var(--orange), 
     'red'   : var(--red   ), 
     'purple': var(--purple),
+    'black' : var(--black ),
     'dark'  : var(--dark  ), 
     'gray'  : var(--gray  ), 
     'light' : var(--light ),
