--- a/src/lib/font-size.scss
+++ b/src/lib/font-size.scss
@@ -15,4 +15,8 @@
     .#{$breakpoint}font-size-large { 
         font-size: 18px !important; 
     }  
+
+    .#{$breakpoint}font-size-larger { 
+        font-size: 20px !important; 
+    } 
 } 
