--- a/src/lib/color.scss
+++ b/src/lib/color.scss
@@ -87,4 +87,22 @@
         border-left-color: $value !important; 
         border-right-color: $value !important; 
     } 
-}  
+
+    @for $i from 1 through 10 { 
+        .lightning-#{($i * 10) - 5} { 
+            background-color: color-mix(in srgb, $value, var(--light) (($i * 10%) - 5%)) !important;
+        }
+
+        .lightning-#{($i * 10)} { 
+            background-color: color-mix(in srgb, $value, var(--light) ($i * 10%)) !important;
+        }
+
+        .darkness-#{($i * 10) - 5} { 
+            background-color: color-mix(in srgb, $value, var(--dark) (($i * 10%) - 5%)) !important;
+        }
+
+        .darkness-#{($i * 10)} { 
+            background-color: color-mix(in srgb, $value, var(--dark) ($i * 10%)) !important;
+        }
+    } 
+}    
