--- a/src/lib/color.scss
+++ b/src/lib/color.scss
@@ -91,7 +91,7 @@
     @for $i from 0 through 10 { 
         @if($i == 0) {
             .#{$key}-lightning-5 { 
-                background-color: color-mix(in srgb, $value, var(--light) 5) !important;
+                background-color: color-mix(in srgb, $value, var(--light) 5%) !important;
             }
 
             .#{$key}-darkness-5 { 
