--- a/src/lib/visibility.scss
+++ b/src/lib/visibility.scss
@@ -4,8 +4,9 @@
         'visible'  : visible,
         'invisible': hidden 
     ) {   
-        .#{$breakpoint}#{$key} {  
-            visibility: $value !important;
+        .#{$breakpoint}#{$key},
+        .#{$breakpoint}#{$key} * {  
+            visibility: $value !important; 
         } 
     } 
 } 
