--- a/src/lib/font-size.scss
+++ b/src/lib/font-size.scss
@@ -19,4 +19,10 @@
     .#{$breakpoint}font-size-larger { 
         font-size: 20px !important; 
     } 
+
+    @for $i from 0 through 50 {
+        .#{$breakpoint}font-size-#{$i}px {
+            font-size: $i * 1px !important;
+        }
+    } 
 } 
