--- a/src/lib/color.scss
+++ b/src/lib/color.scss
@@ -9,7 +9,7 @@
     --red:   #dc3545;
     --purple:#a615bc;
     --black: #000000;   
-    --dark:  #272727;
+    --dark:  #292828;
     --gray:  #6c757d;
     --light: #ffffff; 
     --smoke: #f5f5f5;
@@ -32,7 +32,7 @@
     --focus:       color-mix(in srgb, var(--primary), transparent 75%);
     --loading:     color-mix(in srgb, var(--gray), var(--light) 50%); 
     --readonly:    color-mix(in srgb, var(--gray), var(--light) 70%);
-    --input:       color-mix(in srgb, var(--gray), var(--light) 85%); 
+    --input:       color-mix(in srgb, var(--gray), var(--light) 85%);  
 } 
 
 
@@ -61,7 +61,16 @@
     'warning'    : var(--warning    ),  
     'danger'     : var(--danger     ),  
     'navigation' : var(--navigation ),  
-    'information': var(--information) 
+    'information': var(--information),
+    
+    //App Colors
+    'breadcrumbs' : var(--breadcrumbs    ),  
+    'body'        : var(--body  ),   
+    'hover'       : var(--hover    ),  
+    'focus'       : var(--focus    ),  
+    'loading'     : var(--loading     ),  
+    'readonly'    : var(--readonly ),  
+    'input'       : var(--input),
 ) {  
     // Text  
     .color-#{$key} {  
