--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -69,8 +69,8 @@
     'circle-info',
     'circle',
     'datamovil',
-    'door-closed', 
-    'door-open',
+    'door-closed-fill', 
+    'door-open-fill',
     'house-door-fill',
     'house-door', 
     'laptop-code',
