--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -71,6 +71,18 @@
     'datamovil',
     'door-closed-fill', 
     'door-open-fill',
+    'file-arrow-down-fill',
+    'file-arrow-down',
+    'file-arrow-up-fill',
+    'file-arrow-up',
+    'file-csv-fill',
+    'file-csv',
+    'file-fill',
+    'file', 
+    'file-xls-fill',
+    'file-xls',
+    'floppy-disk-fill',
+    'floppy-disk',
     'house-door-fill',
     'house-door', 
     'laptop-code',
