--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -62,6 +62,7 @@
     'arrow-from-bracket',
     'arrows-rotate',
     'bars',
+    'browser-window',
     'check',
     'circle-check-fill',
     'circle-exclamation-fill',
@@ -83,6 +84,10 @@
     'file-xls',
     'floppy-disk-fill',
     'floppy-disk',
+    'grid',
+    'grip-vertical',
+    'hash',
+    'floppy-disk',
     'house-door-fill',
     'house-door', 
     'laptop-code',
@@ -92,6 +97,7 @@
     'list',
     'lock-fill',
     'magnifying-glass',
+    'modal-fill',
     'pen-fill',
     'plus',
     'trash-can-fill',
