--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -63,6 +63,8 @@
     'arrows-rotate',
     'bars',
     'browser-window',
+    'check-square-fill',
+    'check-square',
     'check',
     'circle-check-fill',
     'circle-exclamation-fill',
@@ -82,6 +84,8 @@
     'file', 
     'file-xls-fill',
     'file-xls',
+    'filter-fill',
+    'filter',
     'floppy-disk-fill',
     'floppy-disk',
     'grid',
@@ -100,8 +104,16 @@
     'modal-fill',
     'pen-fill',
     'plus',
+    'pointer-fill',
+    'pointer',
+    'reply',
     'trash-can-fill',
     'trash-can',
+    'truck-fill',
+    'truck',
+    'turn-down',
+    'turn-up',
+    'undo',
     'user-circle-fill',
     'user-circle',
     'user-cog-fill',
