--- a/src/lib/color.scss
+++ b/src/lib/color.scss
@@ -23,6 +23,13 @@
     --danger:      var(--red   ); 
     --navigation:  var(--orange); 
     --information: var(--blue  );  
+    --primary-light:     color-mix(in srgb, var(--primary),     var(--light) 80%);
+    --secondary-light:   color-mix(in srgb, var(--secondary),   var(--light) 80%); 
+    --success-light:     color-mix(in srgb, var(--success),     var(--light) 80%); 
+    --warning-light:     color-mix(in srgb, var(--warning),     var(--light) 80%); 
+    --danger-light:      color-mix(in srgb, var(--danger),      var(--light) 80%); 
+    --navigation-light:  color-mix(in srgb, var(--navigation),  var(--light) 80%); 
+    --information-light: color-mix(in srgb, var(--information), var(--light) 80%); 
 
     //App Colors 
     --containers:  var(--light); 
@@ -66,6 +73,13 @@
     'danger'     : var(--danger     ),  
     'navigation' : var(--navigation ),  
     'information': var(--information),
+    'primary-light'    : var(--primary-light    ),  
+    'secondary-light'  : var(--secondary-light  ),   
+    'success-light'    : var(--success-light    ),  
+    'warning-light'    : var(--warning-light    ),  
+    'danger-light'     : var(--danger-light     ),  
+    'navigation-light' : var(--navigation-light ),  
+    'information-light': var(--information-light),
     
     //App Colors
     'breadcrumbs' : var(--breadcrumbs ),  
