--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -43,6 +43,9 @@
     'arrows-rotate',
     'bars',
     'browser-window',
+    'bug-fill',
+    'bug-slash-fill',
+    'bugs-fill',
     'cells',
     'check-square-fill',
     'check-square',
@@ -72,7 +75,11 @@
     'grid',
     'grip-vertical',
     'grip',
+    'hand-stop-fill',
+    'hand-stop',
     'hash',
+    'heart-fill',
+    'heart',
     'floppy-disk',
     'house-door-fill',
     'house-door', 
