--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -58,6 +58,21 @@
     'datamovil',
     'door-closed-fill', 
     'door-open-fill',
+    'exclamation-circle-fill',
+    'exclamation-circle',
+    'exclamation-diamond-fill',
+    'exclamation-diamond',
+    'exclamation-octagon-fill',
+    'exclamation-octagon',
+    'exclamation-square-fill',
+    'exclamation-square',
+    'exclamation-triangle-fill',
+    'exclamation-triangle',
+    'exclamation-',
+    'eye-fill',
+    'eye-slash-fill',
+    'eye-slash',
+    'eye',
     'file-arrow-down-fill',
     'file-arrow-down',
     'file-arrow-up-fill',
@@ -83,6 +98,11 @@
     'floppy-disk',
     'house-door-fill',
     'house-door', 
+    'info-circle-fill',
+    'info-circle',
+    'info-square-fill',
+    'info-square',
+    'info', 
     'laptop-code',
     'list-check',
     'list-numbers',
