--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -47,13 +47,11 @@
     'bug-slash-fill',
     'bugs-fill',
     'cells',
+    'check-circle-fill',
+    'check-circle',
     'check-square-fill',
     'check-square',
     'check',
-    'circle-check-fill',
-    'circle-exclamation-fill',
-    'circle-info-fill',
-    'circle-info',
     'circle',
     'datamovil',
     'door-closed-fill', 
@@ -68,7 +66,7 @@
     'exclamation-square',
     'exclamation-triangle-fill',
     'exclamation-triangle',
-    'exclamation-',
+    'exclamation',
     'eye-fill',
     'eye-slash-fill',
     'eye-slash',
