--- a/src/lib/icons.scss
+++ b/src/lib/icons.scss
@@ -53,6 +53,7 @@
     'check-square',
     'check',
     'circle',
+    'coer91',
     'datamovil',
     'door-closed-fill', 
     'door-open-fill',
